Chap22-Thymeleaf: fixed the issue of previous commit (7b4a916a)

--- a/src/main/resources/templates/books/books_list.html
+++ b/src/main/resources/templates/books/books_list.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Books List</title>
+    <title>Pierrot Books List</title>
 </head>
 <body>
 
