--- a/src/main/resources/templates/books/books_list.html
+++ b/src/main/resources/templates/books/books_list.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
     <title>Pierrot Books List</title>
 </head>
 <body>
-
+<table>
+    <tr>
+        <th>ID</th>
+        <th>Title</th>
+        <th>Publisher</th>
+    </tr>
+    <tr th:each="book:${books}">
+        <td th:text="${book.id}">123</td>
+        <td th:text="${book.title}">Dummy Title</td>
+        <td>Dummy Publisher</td>
+    </tr>
+</table>
 </body>
 </html>
