Exercise3: fixed the issue on previous Commit (915399d4)

--- a/src/main/resources/templates/authors/authors_list.html
+++ b/src/main/resources/templates/authors/authors_list.html
@@ -13,8 +13,8 @@
     </tr>
     <tr th:each="author:${authors}">
         <td th:text="${author.id}">123</td>
-        <td th:text="${author.firstname}">Pierrot</td>
-        <td th:text="${author.lastname}">Mongonnam</td>
+        <td th:text="${author.firstName}">Pierrot</td>
+        <td th:text="${author.lastName}">Mongonnam</td>
     </tr>
 </table>
 </body>
